RESOLVED FIXED135667
REGRESSION (WebKit2): iOS Safari default encoding doesn't follow system language
https://bugs.webkit.org/show_bug.cgi?id=135667
Summary REGRESSION (WebKit2): iOS Safari default encoding doesn't follow system language
Alexey Proskuryakov
Reported 2014-08-06 13:07:28 PDT
With WebKit1, default encoding could be set via +[WebPreferences _setInitialDefaultTextEncodingToSystemEncoding], but there is nothing equivalent for WebKit2 modern API.
Attachments
proposed fix (13.48 KB, patch)
2014-08-06 13:14 PDT, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2014-08-06 13:07:41 PDT
Alexey Proskuryakov
Comment 2 2014-08-06 13:14:13 PDT
Created attachment 236128 [details] proposed fix
Anders Carlsson
Comment 3 2014-08-06 13:18:20 PDT
Comment on attachment 236128 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=236128&action=review > Source/WebKit2/Shared/WebPreferencesDefinitions.h:278 > + macro(DefaultTextEncodingName, defaultTextEncodingName, String, String, defaultTextEncodingNameForSystemLanguage()) \ I think you want to prefix this with WebCore:: since it's a WebCore function.
Alexey Proskuryakov
Comment 4 2014-08-06 13:25:51 PDT
Alexey Proskuryakov
Comment 5 2014-08-06 13:26:12 PDT
> I think you want to prefix this with WebCore:: since it's a WebCore function. Talked to Anders, and we decided that it's OK as is.
Note You need to log in before you can comment on or make changes to this bug.